--- a/SolBusGrupo15Laboratorio/nbproject/project.properties
+++ b/SolBusGrupo15Laboratorio/nbproject/project.properties
@@ -81,7 +81,7 @@ main.class=solbusgrupo15laboratorio.SolBusGrupo15Laboratorio
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=Oracle_OpenJDK_21.0.2_13
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
