--- a/SolBusGrupo15Laboratorio/nbproject/project.properties
+++ b/SolBusGrupo15Laboratorio/nbproject/project.properties
@@ -77,11 +77,11 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=SolBusGrupo15Laboratorio
-main.class=solbusgrupo15laboratorio.SolBusGrupo15Laboratorio
+main.class=vistas.Menu
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=Oracle_OpenJDK_21.0.2_13
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
