--- a/SolBusGrupo15Laboratorio/nbproject/project.properties
+++ b/SolBusGrupo15Laboratorio/nbproject/project.properties
@@ -50,8 +50,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=17
-javac.target=17
+javac.source=21
+javac.target=21
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -81,7 +81,7 @@ main.class=vistas.Menu
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=Oracle_OpenJDK_21.0.2_13
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
